--- a/scripts/datahandling/g2p.ipynb
+++ b/scripts/datahandling/g2p.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "4    ab     a bˠ"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4               Dún do bhéal.  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,21 +252,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for sentence in transcriptions[[\"sentence\"]]:\n",
-    "    words = [word.strip() for word in sentence.split()]\n",
+    "def sent2phones(sentence):\n",
+    "    words = [x.strip(\" .,!?:;\") for x in sentence.split()]\n",
     "    \n",
     "    phoneme_seq = []\n",
     "    for word in words:\n",
     "        if word in g2p_dict:\n",
     "            phoneme_seq.append(g2p_dict[word])\n",
+    "        elif word.lower() in g2p_dict:\n",
+    "            phoneme_seq.append(g2p_dict[word.lower()])\n",
     "        else:\n",
     "            phoneme_seq.append(\"[UNK]\")\n",
     "    \n",
-    "    "
+    "    return \" \".join(phoneme_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transcriptions[\"phoneme_sentence\"] = transcriptions[\"sentence\"].apply(sent2phones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>path</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>phoneme_sentence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>audio/001/common_voice_ga-IE_17571418.mp3</td>\n",
+       "      <td>Tá a mála ar an urlár</td>\n",
+       "      <td>ˈ t̪ˠ aː ə ˈ mˠ aː l̻ˠ ə ˈ e ɾʲ ˈ ə n̻ˠ ˈ uː ɾ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>audio/001/common_voice_ga-IE_17571419.mp3</td>\n",
+       "      <td>An Phoblacht Doiminiceach</td>\n",
+       "      <td>ˈ ə n̻ˠ ˈ fˠ o bˠ l̻ˠ a x t̪ˠ ˈ d̪ˠ i mʲ ə nʲ ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>audio/001/common_voice_ga-IE_17571420.mp3</td>\n",
+       "      <td>Do ghnó féin déan a dhuine</td>\n",
+       "      <td>ˈ d̪ˠ ə ɣ n̻ˠ oː ˈ h eː nʲ ˈ dʲ eː n̻ˠ ə ˈ ɣ i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>audio/001/common_voice_ga-IE_17571424.mp3</td>\n",
+       "      <td>Ní raibh mé</td>\n",
+       "      <td>ˈ n̻ʲ iː ˈ ɾˠ oː vˠ ˈ mʲ eː</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>audio/001/common_voice_ga-IE_17571428.mp3</td>\n",
+       "      <td>Dún do bhéal.</td>\n",
+       "      <td>ˈ d̪ˠ uː n̻ˠ ˈ d̪ˠ ə ˈ vʲ eː l̻ˠ</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                                       path  \\\n",
+       "0           0  audio/001/common_voice_ga-IE_17571418.mp3   \n",
+       "1           1  audio/001/common_voice_ga-IE_17571419.mp3   \n",
+       "2           2  audio/001/common_voice_ga-IE_17571420.mp3   \n",
+       "3           3  audio/001/common_voice_ga-IE_17571424.mp3   \n",
+       "4           4  audio/001/common_voice_ga-IE_17571428.mp3   \n",
+       "\n",
+       "                     sentence  \\\n",
+       "0       Tá a mála ar an urlár   \n",
+       "1   An Phoblacht Doiminiceach   \n",
+       "2  Do ghnó féin déan a dhuine   \n",
+       "3                 Ní raibh mé   \n",
+       "4               Dún do bhéal.   \n",
+       "\n",
+       "                                    phoneme_sentence  \n",
+       "0  ˈ t̪ˠ aː ə ˈ mˠ aː l̻ˠ ə ˈ e ɾʲ ˈ ə n̻ˠ ˈ uː ɾ...  \n",
+       "1  ˈ ə n̻ˠ ˈ fˠ o bˠ l̻ˠ a x t̪ˠ ˈ d̪ˠ i mʲ ə nʲ ...  \n",
+       "2  ˈ d̪ˠ ə ɣ n̻ˠ oː ˈ h eː nʲ ˈ dʲ eː n̻ˠ ə ˈ ɣ i...  \n",
+       "3                        ˈ n̻ʲ iː ˈ ɾˠ oː vˠ ˈ mʲ eː  \n",
+       "4                   ˈ d̪ˠ uː n̻ˠ ˈ d̪ˠ ə ˈ vʲ eː l̻ˠ  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transcriptions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ˈ vʲ eː l̻ˠ'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g2p_dict[\"bhéal\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, great. now we have a new column with phonemic transcriptions. We can tokenize using wav2vec2 tokenizer. For that I think we need a vocabulary of the unique phonemes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phoneme_vocab = set()\n",
+    "phoneme_vocab.update([\"[UNK]\"])\n",
+    "for phonemes in g2p_dict.values():\n",
+    "    phoneme_vocab.update(phonemes.split())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import Wav2Vec2FeatureExtractor, Wav2Vec2Processor, Wav2Vec2CTCTokenizer\n",
+    "\n",
+    "tokenizer = Wav2Vec2CTCTokenizer(\n",
+    "    \n",
+    ")"
    ]
   }
  ],
