--- a/scripts/ESPnetTesting/ASR_finetune_owsm.ipynb
+++ b/scripts/ESPnetTesting/ASR_finetune_owsm.ipynb
@@ -42,7 +42,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/peter/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/enh/decoder/stft_decoder.py:45: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  @torch.cuda.amp.autocast(enabled=False)\n",
+      "/home/peter/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/enh/encoder/stft_encoder.py:50: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  @torch.cuda.amp.autocast(enabled=False)\n",
+      "/home/peter/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/enh/loss/criterions/time_domain.py:446: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  @torch.cuda.amp.autocast(enabled=False)\n",
+      "/home/peter/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/enh/layers/tcn.py:458: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  @torch.cuda.amp.autocast(enabled=False)\n",
+      "/home/peter/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/enh/layers/tcn.py:499: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  @torch.cuda.amp.autocast(enabled=False)\n",
+      "/home/peter/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/enh/layers/uses.py:392: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  @torch.cuda.amp.autocast(enabled=False)\n",
+      "/home/peter/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/enh/layers/uses.py:421: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  @torch.cuda.amp.autocast(enabled=False)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from glob import glob\n",
@@ -52,7 +73,8 @@
     "\n",
     "import torch\n",
     "from espnet2.bin.s2t_inference import Speech2Text\n",
-    "from espnet2.layers.create_adapter_fn import create_lora_adapter\n",
+    "#from espnet2.layers.create_adapter_fn import create_lora_adapter\n",
+    "import espnet2.layers.create_lora_adapter\n",
     "import espnetez as ez\n",
     "\n",
     "# Define hyper parameters\n",
@@ -82,14 +104,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 37 files: 100%|██████████| 37/37 [00:00<00:00, 123263.90it/s]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Namespace' object has no attribute 'promptencoder'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pretrained_model \u001b[38;5;241m=\u001b[39m \u001b[43mSpeech2Text\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pretrained\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mFINETUNE_MODEL\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcategory_sym\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m<\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mLANGUAGE\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m>\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbeam_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m)\u001b[49m \u001b[38;5;66;03m# Load model to extract configs.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m pretrain_config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mvars\u001b[39m(pretrained_model\u001b[38;5;241m.\u001b[39ms2t_train_args)\n\u001b[1;32m      7\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m pretrained_model\u001b[38;5;241m.\u001b[39mtokenizer\n",
+      "File \u001b[0;32m~/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/bin/s2t_inference.py:525\u001b[0m, in \u001b[0;36mSpeech2Text.from_pretrained\u001b[0;34m(model_tag, **kwargs)\u001b[0m\n\u001b[1;32m    522\u001b[0m     d \u001b[38;5;241m=\u001b[39m ModelDownloader()\n\u001b[1;32m    523\u001b[0m     kwargs\u001b[38;5;241m.\u001b[39mupdate(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39md\u001b[38;5;241m.\u001b[39mdownload_and_unpack(model_tag))\n\u001b[0;32m--> 525\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mSpeech2Text\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/bin/s2t_inference.py:95\u001b[0m, in \u001b[0;36mSpeech2Text.__init__\u001b[0;34m(self, s2t_train_config, s2t_model_file, lm_train_config, lm_file, ngram_scorer, ngram_file, token_type, bpemodel, device, maxlenratio, minlenratio, batch_size, dtype, beam_size, ctc_weight, lm_weight, ngram_weight, penalty, nbest, streaming, quantize_s2t_model, quantize_lm, quantize_modules, quantize_dtype, category_sym, task_sym, time_sym)\u001b[0m\n\u001b[1;32m     92\u001b[0m quantize_dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(torch, quantize_dtype)\n\u001b[1;32m     94\u001b[0m \u001b[38;5;66;03m# 1. Build S2T model\u001b[39;00m\n\u001b[0;32m---> 95\u001b[0m s2t_model, s2t_train_args \u001b[38;5;241m=\u001b[39m \u001b[43mS2TTask\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild_model_from_file\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     96\u001b[0m \u001b[43m    \u001b[49m\u001b[43ms2t_train_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms2t_model_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\n\u001b[1;32m     97\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     98\u001b[0m s2t_model\u001b[38;5;241m.\u001b[39mto(dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mgetattr\u001b[39m(torch, dtype))\u001b[38;5;241m.\u001b[39meval()\n\u001b[1;32m    100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m quantize_s2t_model:\n",
+      "File \u001b[0;32m~/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/tasks/abs_task.py:2045\u001b[0m, in \u001b[0;36mAbsTask.build_model_from_file\u001b[0;34m(cls, config_file, model_file, device)\u001b[0m\n\u001b[1;32m   2043\u001b[0m     args \u001b[38;5;241m=\u001b[39m yaml\u001b[38;5;241m.\u001b[39msafe_load(f)\n\u001b[1;32m   2044\u001b[0m args \u001b[38;5;241m=\u001b[39m argparse\u001b[38;5;241m.\u001b[39mNamespace(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39margs)\n\u001b[0;32m-> 2045\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2046\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, AbsESPnetModel):\n\u001b[1;32m   2047\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m   2048\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel must inherit \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mAbsESPnetModel\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, but got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(model)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2049\u001b[0m     )\n",
+      "File \u001b[0;32m~/Desktop/Studies/Thesis/ThesisProject/venv/lib/python3.10/site-packages/espnet2/tasks/s2t.py:454\u001b[0m, in \u001b[0;36mS2TTask.build_model\u001b[0;34m(cls, args)\u001b[0m\n\u001b[1;32m    451\u001b[0m encoder \u001b[38;5;241m=\u001b[39m encoder_class(input_size\u001b[38;5;241m=\u001b[39minput_size, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39margs\u001b[38;5;241m.\u001b[39mencoder_conf)\n\u001b[1;32m    453\u001b[0m \u001b[38;5;66;03m# 5. Prompt Encoder\u001b[39;00m\n\u001b[0;32m--> 454\u001b[0m promptencoder_class \u001b[38;5;241m=\u001b[39m promptencoder_choices\u001b[38;5;241m.\u001b[39mget_class(\u001b[43margs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpromptencoder\u001b[49m)\n\u001b[1;32m    455\u001b[0m promptencoder \u001b[38;5;241m=\u001b[39m promptencoder_class(\n\u001b[1;32m    456\u001b[0m     input_size\u001b[38;5;241m=\u001b[39margs\u001b[38;5;241m.\u001b[39mpromptencoder_conf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutput_size\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m    457\u001b[0m     input_layer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    458\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39margs\u001b[38;5;241m.\u001b[39mpromptencoder_conf\n\u001b[1;32m    459\u001b[0m )\n\u001b[1;32m    461\u001b[0m \u001b[38;5;66;03m# 6. CTC\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Namespace' object has no attribute 'promptencoder'"
+     ]
+    }
+   ],
    "source": [
     "pretrained_model = Speech2Text.from_pretrained(\n",
     "    FINETUNE_MODEL,\n",
     "    category_sym=f\"<{LANGUAGE}>\",\n",
-    "    beam_size=10,\n",
+    "    beam_size=10\n",
     ") # Load model to extract configs.\n",
     "pretrain_config = vars(pretrained_model.s2t_train_args)\n",
     "tokenizer = pretrained_model.tokenizer\n",
@@ -370,11 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "yaml"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# LoRA finetune related\n",
@@ -437,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
