--- a/scripts/datahandling/testing/g2pPlusDataPrep.ipynb
+++ b/scripts/datahandling/testing/g2pPlusDataPrep.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# imports\n",
     "import pandas as pd\n",
-    "import nltk, os\n"
+    "import nltk, os"
    ]
   },
   {
@@ -180,12 +180,10 @@
    "metadata": {},
    "source": [
     "## task flow\n",
-    "1. Read the TSV into a Pandas DataFrame (or a dictionary).\n",
-    "    * Left column = words\n",
-    "    * Right column = phoneme transcriptions\n",
-    "2. Tokenize your input text.\n",
+    "1. Read the TSV into a dictionary. (words, phoneme transcriptions)\n",
+    "2. Tokenize input text.\n",
     "    * Split the sentence into words\n",
-    "    * For each word, do a lookup in your DataFrame/dictionary.\n",
+    "    * For each word, do a lookup in your dictionary.\n",
     "3. Replace each word with its phoneme sequence using the mapping.\n",
     "    * If a word is not in your dictionary, \"<unk>\"\n",
     "4. Join the phonemes for each word in order to form the full phoneme sequence (should I use word separator? i think \"|\" is standard)"
@@ -589,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +597,7 @@
     "for phonemes in g2p_dict.values():\n",
     "    phoneme_vocab.update(phonemes.split())\n",
     "# add some special tokens that are present in https://huggingface.co/docs/transformers/model_doc/wav2vec2_phoneme    \n",
-    "phoneme_vocab.update([\"<s>\", \"</s>\", \"<unk>\", \"<pad>\"])\n",
+    "phoneme_vocab.update([\"<s>\", \"</s>\", \"|\", \"<unk>\", \"<pad>\"])\n",
     "\n",
     "# now sort and index the set as dict as \"phoneme: index\"\n",
     "sorted_ph_vocab = {ph: i for i, ph in enumerate(sorted(phoneme_vocab))}\n",
@@ -719,44 +717,6 @@
     "    torchaudio.save(output_path+file_path[:-3]+\"wav\", \n",
     "                    new_waveform, \n",
     "                    16000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### preprocess dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Finetune Wav2Vec2 model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import Wav2Vec2ModelForCTC\n",
-    "model = Wav2Vec2ModelForCTC.from_pretrained(\n",
-    "    \"facebook/wav2vec2-base\",\n",
-    "    ctc_loss_reduction=\"mean\",\n",
-    "    torch_dtype=torch.float16, \n",
-    "    attn_implementation=\"flash_attention_2\"\n",
-    "    )\n"
    ]
   }
  ],
