webhook integrations for ls

--- a/scripts/tts/tts_annnotator_support.ipynb
+++ b/scripts/tts/tts_annnotator_support.ipynb
@@ -2,19 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8b5d7784",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'texttospeech' from 'google.cloud' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mipywidgets\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mwidgets\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisplay\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m display, Audio, clear_output\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcloud\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m texttospeech\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydub\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AudioSegment\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msimpleaudio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msa\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'texttospeech' from 'google.cloud' (unknown location)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pccady/Studies/ThesisProject/.venv/lib/python3.11/site-packages/pydub/utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
+      "  warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n"
      ]
     }
    ],
@@ -23,16 +20,124 @@
     "from IPython.display import display, Audio, clear_output\n",
     "from google.cloud import texttospeech\n",
     "from pydub import AudioSegment\n",
-    "import simpleaudio as sa\n",
+    "from IPython.display import Audio\n",
     "import tempfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1045ebe0",
+   "execution_count": 2,
+   "id": "d4947106",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "phoneme_table_html = \"\"\"\n",
+    "<style>\n",
+    ".phoneme-table {\n",
+    "    border-collapse: collapse;\n",
+    "    width: 100%;\n",
+    "    font-family: sans-serif;\n",
+    "    margin-top: 1em;\n",
+    "}\n",
+    ".phoneme-table th, .phoneme-table td {\n",
+    "    border: 1px solid #ccc;\n",
+    "    padding: 6px 10px;\n",
+    "    text-align: center;\n",
+    "}\n",
+    ".phoneme-table th {\n",
+    "    background-color: #f2f2f2;\n",
+    "}\n",
+    ".phoneme-table-container {\n",
+    "    max-height: 300px;\n",
+    "    overflow-y: scroll;\n",
+    "    border: 1px solid #ccc;\n",
+    "    margin-top: 10px;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"phoneme-table-container\">\n",
+    "<table class=\"phoneme-table\">\n",
+    "    <tr>\n",
+    "        <th>IPA Phoneme</th>\n",
+    "        <th>Example Word</th>\n",
+    "        <th>IPA Transcription</th>\n",
+    "    </tr>\n",
+    "    <tr><td>p</td><td>popular</td><td>ˈpɑːpjəlɚ</td></tr>\n",
+    "    <tr><td>b</td><td>bubble</td><td>ˈbʌbəl</td></tr>\n",
+    "    <tr><td>t</td><td>tinker</td><td>ˈtɪŋkɚ</td></tr>\n",
+    "    <tr><td>d</td><td>dog</td><td>ˈdɑːg</td></tr>\n",
+    "    <tr><td>k</td><td>crown</td><td>ˈkɹaʊn</td></tr>\n",
+    "    <tr><td>ɡ</td><td>gravely</td><td>ˈgɹeɪˌvliː</td></tr>\n",
+    "    <tr><td>m</td><td>mapping</td><td>ˈmæpəŋ</td></tr>\n",
+    "    <tr><td>n</td><td>nine</td><td>ˈnaɪn</td></tr>\n",
+    "    <tr><td>ŋ</td><td>bank</td><td>ˈbæŋk</td></tr>\n",
+    "    <tr><td>f</td><td>frog</td><td>ˈfɹɑːg</td></tr>\n",
+    "    <tr><td>v</td><td>valve</td><td>ˈvælv</td></tr>\n",
+    "    <tr><td>s</td><td>massage</td><td>məˈsɑːʒ</td></tr>\n",
+    "    <tr><td>z</td><td>zoom</td><td>ˈzuːm</td></tr>\n",
+    "    <tr><td>θ</td><td>thigh</td><td>ˈθaɪ</td></tr>\n",
+    "    <tr><td>ð</td><td>mother</td><td>ˈmʌðɚ</td></tr>\n",
+    "    <tr><td>ʃ</td><td>shopping</td><td>ˈʃɑːpəŋ</td></tr>\n",
+    "    <tr><td>ʒ</td><td>leisure</td><td>ˈliːʒɚ</td></tr>\n",
+    "    <tr><td>h</td><td>mahogany</td><td>məˈhɑːgəˌniː</td></tr>\n",
+    "    <tr><td>l</td><td>lately</td><td>ˈleɪtˌliː</td></tr>\n",
+    "    <tr><td>ɹ</td><td>roaring</td><td>ˈɹɔːɹəŋ</td></tr>\n",
+    "    <tr><td>ʧ</td><td>changed</td><td>ˈʧeɪnʤd</td></tr>\n",
+    "    <tr><td>ʤ</td><td>magenta</td><td>məˈʤɛntə</td></tr>\n",
+    "    <tr><td>j</td><td>younger</td><td>ˈjʌŋgɚ</td></tr>\n",
+    "    <tr><td>w</td><td>whirlwind</td><td>ˈwɚlˌwɪnd</td></tr>\n",
+    "    <tr><td>æ</td><td>cat</td><td>ˈkæt</td></tr>\n",
+    "    <tr><td>ɑː</td><td>cot</td><td>ˈkɑːt</td></tr>\n",
+    "    <tr><td>ə</td><td>again</td><td>əˈgɛn</td></tr>\n",
+    "    <tr><td>ɚ</td><td>bird</td><td>ˈbɚd</td></tr>\n",
+    "    <tr><td>ɛ</td><td>bed</td><td>ˈbɛd</td></tr>\n",
+    "    <tr><td>ɪ</td><td>kit</td><td>ˈkɪt</td></tr>\n",
+    "    <tr><td>iː</td><td>unique</td><td>ˌjuːˈniːk</td></tr>\n",
+    "    <tr><td>ɔː</td><td>more</td><td>ˈmɔːɹ</td></tr>\n",
+    "    <tr><td>ʊ</td><td>could</td><td>ˈkʊd</td></tr>\n",
+    "    <tr><td>uː</td><td>school</td><td>ˈskuːl</td></tr>\n",
+    "    <tr><td>ʌ</td><td>pulse</td><td>ˈpʌls</td></tr>\n",
+    "    <tr><td>aɪ</td><td>price</td><td>ˈpɹaɪs</td></tr>\n",
+    "    <tr><td>aʊ</td><td>flower</td><td>ˈflaʊɚ</td></tr>\n",
+    "    <tr><td>eɪ</td><td>shade</td><td>ˈʃeɪd</td></tr>\n",
+    "    <tr><td>ɔɪ</td><td>choice</td><td>ˈʧɔɪs</td></tr>\n",
+    "    <tr><td>oʊ</td><td>boat</td><td>ˈboʊt</td></tr>\n",
+    "</table>\n",
+    "</div>\n",
+    "\n",
+    "<h4>Stress Symbols</h4>\n",
+    "<ul>\n",
+    "    <li><strong>ˈ</strong> – Primary stress</li>\n",
+    "    <li><strong>ˌ</strong> – Secondary stress</li>\n",
+    "    <li><strong>.</strong> – Syllable boundary</li>\n",
+    "</ul>\n",
+    "\"\"\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1045ebe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0bc8453e7194dcb847515d8282bbeb1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='Language:', options=(('English (US)', 'en-US'), ('Irish (I…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "# Voice and language dropdowns\n",
@@ -88,9 +193,9 @@
     "    temp_wav.write(response.audio_content)\n",
     "    temp_wav.close()\n",
     "\n",
-    "    audio = AudioSegment.from_wav(temp_wav.name)\n",
-    "    sa.play_buffer(audio.raw_data, num_channels=audio.channels,\n",
-    "                   bytes_per_sample=audio.sample_width, sample_rate=audio.frame_rate)\n",
+    "    #audio = AudioSegment.from_wav(temp_wav.name)\n",
+    "    #sa.play_buffer(audio.raw_data, num_channels=audio.channels,\n",
+    "    #               bytes_per_sample=audio.sample_width, sample_rate=audio.frame_rate)\n",
     "\n",
     "    return Audio(temp_wav.name)\n",
     "\n",
@@ -105,7 +210,7 @@
     "            audio_widget = synthesize_and_play_ssml(ssml_text, lang_code, gender)\n",
     "            display(audio_widget)\n",
     "        except Exception as e:\n",
-    "            print(f\"❌ Error: {e}\")\n",
+    "            print(f\"Error: {e}\")\n",
     "\n",
     "play_button.on_click(on_play_clicked)\n",
     "\n",
@@ -117,20 +222,116 @@
     "    output_area\n",
     "])\n",
     "\n",
-    "display(ui)\n"
+    "display(ui)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       ".phoneme-table {\n",
+       "    border-collapse: collapse;\n",
+       "    width: 100%;\n",
+       "    font-family: sans-serif;\n",
+       "    margin-top: 1em;\n",
+       "}\n",
+       ".phoneme-table th, .phoneme-table td {\n",
+       "    border: 1px solid #ccc;\n",
+       "    padding: 6px 10px;\n",
+       "    text-align: center;\n",
+       "}\n",
+       ".phoneme-table th {\n",
+       "    background-color: #f2f2f2;\n",
+       "}\n",
+       ".phoneme-table-container {\n",
+       "    max-height: 300px;\n",
+       "    overflow-y: scroll;\n",
+       "    border: 1px solid #ccc;\n",
+       "    margin-top: 10px;\n",
+       "}\n",
+       "</style>\n",
+       "\n",
+       "<div class=\"phoneme-table-container\">\n",
+       "<table class=\"phoneme-table\">\n",
+       "    <tr>\n",
+       "        <th>IPA Phoneme</th>\n",
+       "        <th>Example Word</th>\n",
+       "        <th>IPA Transcription</th>\n",
+       "    </tr>\n",
+       "    <tr><td>p</td><td>popular</td><td>ˈpɑːpjəlɚ</td></tr>\n",
+       "    <tr><td>b</td><td>bubble</td><td>ˈbʌbəl</td></tr>\n",
+       "    <tr><td>t</td><td>tinker</td><td>ˈtɪŋkɚ</td></tr>\n",
+       "    <tr><td>d</td><td>dog</td><td>ˈdɑːg</td></tr>\n",
+       "    <tr><td>k</td><td>crown</td><td>ˈkɹaʊn</td></tr>\n",
+       "    <tr><td>ɡ</td><td>gravely</td><td>ˈgɹeɪˌvliː</td></tr>\n",
+       "    <tr><td>m</td><td>mapping</td><td>ˈmæpəŋ</td></tr>\n",
+       "    <tr><td>n</td><td>nine</td><td>ˈnaɪn</td></tr>\n",
+       "    <tr><td>ŋ</td><td>bank</td><td>ˈbæŋk</td></tr>\n",
+       "    <tr><td>f</td><td>frog</td><td>ˈfɹɑːg</td></tr>\n",
+       "    <tr><td>v</td><td>valve</td><td>ˈvælv</td></tr>\n",
+       "    <tr><td>s</td><td>massage</td><td>məˈsɑːʒ</td></tr>\n",
+       "    <tr><td>z</td><td>zoom</td><td>ˈzuːm</td></tr>\n",
+       "    <tr><td>θ</td><td>thigh</td><td>ˈθaɪ</td></tr>\n",
+       "    <tr><td>ð</td><td>mother</td><td>ˈmʌðɚ</td></tr>\n",
+       "    <tr><td>ʃ</td><td>shopping</td><td>ˈʃɑːpəŋ</td></tr>\n",
+       "    <tr><td>ʒ</td><td>leisure</td><td>ˈliːʒɚ</td></tr>\n",
+       "    <tr><td>h</td><td>mahogany</td><td>məˈhɑːgəˌniː</td></tr>\n",
+       "    <tr><td>l</td><td>lately</td><td>ˈleɪtˌliː</td></tr>\n",
+       "    <tr><td>ɹ</td><td>roaring</td><td>ˈɹɔːɹəŋ</td></tr>\n",
+       "    <tr><td>ʧ</td><td>changed</td><td>ˈʧeɪnʤd</td></tr>\n",
+       "    <tr><td>ʤ</td><td>magenta</td><td>məˈʤɛntə</td></tr>\n",
+       "    <tr><td>j</td><td>younger</td><td>ˈjʌŋgɚ</td></tr>\n",
+       "    <tr><td>w</td><td>whirlwind</td><td>ˈwɚlˌwɪnd</td></tr>\n",
+       "    <tr><td>æ</td><td>cat</td><td>ˈkæt</td></tr>\n",
+       "    <tr><td>ɑː</td><td>cot</td><td>ˈkɑːt</td></tr>\n",
+       "    <tr><td>ə</td><td>again</td><td>əˈgɛn</td></tr>\n",
+       "    <tr><td>ɚ</td><td>bird</td><td>ˈbɚd</td></tr>\n",
+       "    <tr><td>ɛ</td><td>bed</td><td>ˈbɛd</td></tr>\n",
+       "    <tr><td>ɪ</td><td>kit</td><td>ˈkɪt</td></tr>\n",
+       "    <tr><td>iː</td><td>unique</td><td>ˌjuːˈniːk</td></tr>\n",
+       "    <tr><td>ɔː</td><td>more</td><td>ˈmɔːɹ</td></tr>\n",
+       "    <tr><td>ʊ</td><td>could</td><td>ˈkʊd</td></tr>\n",
+       "    <tr><td>uː</td><td>school</td><td>ˈskuːl</td></tr>\n",
+       "    <tr><td>ʌ</td><td>pulse</td><td>ˈpʌls</td></tr>\n",
+       "    <tr><td>aɪ</td><td>price</td><td>ˈpɹaɪs</td></tr>\n",
+       "    <tr><td>aʊ</td><td>flower</td><td>ˈflaʊɚ</td></tr>\n",
+       "    <tr><td>eɪ</td><td>shade</td><td>ˈʃeɪd</td></tr>\n",
+       "    <tr><td>ɔɪ</td><td>choice</td><td>ˈʧɔɪs</td></tr>\n",
+       "    <tr><td>oʊ</td><td>boat</td><td>ˈboʊt</td></tr>\n",
+       "</table>\n",
+       "</div>\n",
+       "\n",
+       "<h4>Stress Symbols</h4>\n",
+       "<ul>\n",
+       "    <li><strong>ˈ</strong> – Primary stress</li>\n",
+       "    <li><strong>ˌ</strong> – Secondary stress</li>\n",
+       "    <li><strong>.</strong> – Syllable boundary</li>\n",
+       "</ul>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# reference table for valid phonemes for US-English tts on google cloud\n",
+    "# https://cloud.google.com/text-to-speech/docs/phonemes\n",
+    "display(HTML(phoneme_table_html))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
