--- a/scripts/datahandling/L1/teanglann_csv_prep.ipynb
+++ b/scripts/datahandling/L1/teanglann_csv_prep.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Data prep\n",
-    "this notebook preps the converted .wav files scraped from teanglann to "
+    "this notebook preps the converted .wav files scraped from teanglann for use as a dataframe with filenames and phoneme representations"
    ]
   },
   {
